force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Register_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Register_Date__c</fullName>
    <label>Campaign Member Register Date</label>
    <type>DateTime</type>
</CustomField>