force-app/main/default/objects/CampaignMember/fields/p2s_base1__AssociatedDateOverride__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__AssociatedDateOverride__c</fullName>
    <description>If this field is populated, it will be used for determining the date the campaign member was first associated as opposed to the CreatedDate on the record</description>
    <inlineHelpText>If this field is populated, it will be used for determining the date the campaign member was first associated as opposed to the CreatedDate on the record</inlineHelpText>
    <label>Associated Date (Override)</label>
    <type>DateTime</type>
</CustomField>