force-app/main/default/objects/CampaignMember/fields/p2s_base1__FirstRespondedDateTime__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__FirstRespondedDateTime__c</fullName>
    <description>A time stamp of when the CampaignMember record first was set to a Responded Status</description>
    <inlineHelpText>A time stamp of when the CampaignMember record first was set to a Responded Status</inlineHelpText>
    <label>First Responded Date/Time</label>
    <type>DateTime</type>
</CustomField>